# emergency-news-agent

./: .env.example  .gitignore  README.md  pyproject.toml  test_two_items.py
.clawhub/: lock.json
data/: preferences.json  source_registry.json  source_registry_live_quick.json  tavily_queries.json
data/enriched/: items.json
data/feedback/: 2026-W14-review.done.md  2026-W15-review.md  飞书反馈模板.csv
data/manual/: 2026-W14-AI.md  template.md
data/media/: 2026-W14-urls.txt  template-urls.txt
data/raw/: live_quick_items.json  raw_270_titles.txt  recent_week.json
data/scored/: analyzed_items_manual.json  analyzed_items_w15.json  screened_items.json  test_analyzed.json
docs/: content_ingestion_strategy.md  current_execution_plan.md  homepage_figma_spec.md  output_rules.md  pipeline.md  pm_project_management.md  project_scope.md  report_template.md  risk_register.md  roadmap.md  scoring_rule.md  sources.md  taxonomy.md  weekly_run_log.md
outputs/weekly/: index.html  应急周报_2026-03-23_2026-03-29.html  应急周报_2026-W13_20260403-0932.html  应急周报_2026-W13_20260405-002312.html  应急周报_2026-W13_20260405-224120.html  应急周报_2026-W14_20260402-1625.html  应急周报_2026-W14_20260406-000420.html  应急周报_2026-W14_20260406-221755.html  应急周报_2026-W14_20260406-222943.html  应急周报_2026-W14_20260406-223048.html  应急周报_2026-W14_20260406-223653.html  应急周报_2026-W14_20260406-224002.html  应急周报_2026-W15_20260408-201527.html
scripts/: audit_raw_items.py  run_collect_once.py  run_scheduler.py  run_weekly_report.py
skills/iran-briefing/: _meta.json
src/emergency_intel/: audit.py  (+7 more)
tests/: test_pipeline.py
(+32 files in other folders)
