[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-intel-system"
version = "0.1.0"
description = "MVP weekly intelligence report pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "curl_cffi>=0.7",
    "playwright>=1.40",
    "feedparser>=6.0",
    "yt-dlp>=2024.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
